[gd_scene load_steps=3 format=3 uid="uid://e7wwuscqb5ie"]

[ext_resource type="Script" path="res://Menu/menu.gd" id="1_o04jq"]
[ext_resource type="Texture2D" uid="uid://bnj837fxpfl0" path="res://Menu/fon.jpg" id="2_hjme6"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_o04jq")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(224.5, 401.5)
scale = Vector2(0.629076, 0.619449)
texture = ExtResource("2_hjme6")

[node name="ButtonStart" type="Button" parent="."]
offset_left = 142.0
offset_top = 557.0
offset_right = 321.0
offset_bottom = 614.0
theme_override_font_sizes/font_size = 35
text = "Начать"

[node name="ButtonEasy" type="Button" parent="."]
visible = false
offset_left = 146.0
offset_top = 382.0
offset_right = 318.0
offset_bottom = 440.0
theme_override_font_sizes/font_size = 30
text = "Легкий"

[node name="ButtonAverage" type="Button" parent="."]
visible = false
offset_left = 145.0
offset_top = 468.0
offset_right = 319.0
offset_bottom = 525.0
theme_override_font_sizes/font_size = 30
text = "Средний
"

[node name="ButtonHard" type="Button" parent="."]
visible = false
offset_left = 144.0
offset_top = 558.0
offset_right = 320.0
offset_bottom = 613.0
theme_override_font_sizes/font_size = 30
text = "Сложный"

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 24.0
offset_top = 82.0
offset_right = 427.0
offset_bottom = 201.0

[node name="LabelStart" type="Label" parent="PanelContainer"]
custom_minimum_size = Vector2(400, 35)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.117826, 0.0335397, 0.621608, 1)
theme_override_font_sizes/font_size = 45
text = "Переливашка"
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="ButtonEasy" to="." method="_on_button_easy_pressed"]
[connection signal="pressed" from="ButtonAverage" to="." method="_on_button_average_pressed"]
[connection signal="pressed" from="ButtonHard" to="." method="_on_button_hard_pressed"]
